# pylam

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pylam/: __init__.py  __main__.py  pylam.py
