[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylam"
version = "0.1.0"
description = "Debug a Python Lambda function"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
authors = [{name = "Tim Crowley", email = "tim1e9@nonyabusiness.fu"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/tim1e9/pylam"
